finalized all functionality

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel = "stylesheet" href = "styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
+    <link rel = "stylesheet" href = "https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Tic Tact Toe</title>
 </head>
 <body>
@@ -31,16 +32,29 @@
         </div>
     </div>
 
-    <div class = "container message d-none">
-        <div class = "text-center">
-            <h2 class = "display-4"></h2>
-            <button class = "btn btn-info" id = "restartBtn">Restart</button>
+    <!-- Winner Display Message -->
+    <div class = "message d-none">
+        <div class = "container">
+            <div class = "text-center my-5">
+                <h2 class = "winner-text display-2 text-info"></h2>
+                <button class = "btn btn-outline-info my-5" id = "restartBtn">Restart</button>
+            </div>
         </div>
+        
     </div>
 
-    <div class = "container about d-none">
-        <div class = " text-center">
-            <p></p>
+    <!-- About Section -->
+    <div class = "about d-none">
+        <div class = "container my-5 text-center">
+            <span id = "aboutCross"> &cross; </span>
+            <p>ABOUT</p>
+            <div>
+                <a href = "https://github.com/nvkex" ><i class="fa fa-github-square" aria-hidden="true"></i></a>
+            </div>
+            <div>
+                <a href = "https://instagram.com/nvkex"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            </div>
+
         </div>
     </div>
 
